Finished adapting my files to the style concept

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -13,6 +13,9 @@
 \subfile{denkmayr_Fragments}
 
 \newpage
+\subfile{bersenkowitsch_Databinding}
+
+\newpage
 \subfile{denkmayr_Bundles}
 
 \newpage
@@ -33,7 +36,11 @@
 \subfile{denkmayr_Advertising}
 \newpage
 \subfile{irsiegler_PaidVersion}
+\newpage
+\subfile{bersenkowitsch_Promotions}
 
+\section{Der Trainingsplan}
+\subfile{bersenkowitsch_Trainingsplan}
 \newpage
 \printbibliography
 
