--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Trainingsplan.tex
@@ -1,22 +1,11 @@
-\documentclass[a4paper,12pt]{article}
-
-\usepackage[utf8]{inputenc}
-\usepackage[ngerman]{babel}
-\usepackage[T1]{fontenc}
-\usepackage{mathtools}
-\usepackage{pbox}
-\usepackage{graphicx}
+\documentclass[FIPLY_base.tex]{subfiles}
 
 \title{Konzept zur Erstellung eines Trainingsplans}
 \author{Daniel Bersenkowitsch}
-\date{17. Jänner 2015}
-\begin{document}
-	\maketitle
-	\newpage
-	\tableofcontents
-	\newpage
 
-	\section{Vorwort}
+\begin{document}
+
+	\subsection{Vorwort}
 	Ein Trainingsplan besteht aus unterschiedlichen Phasen - je nach Trainingsziel (Muskelaufbau, Maximalkraft, Kraftausdauer (=Gesundheit)) unterschiedlich. Jede Trainingsphase besitzt einen empfohlenenen RM-Wert (0\%-100\%), mit welchem der Benutzer "uben kann. Alle empfohlenen Werte (Satzpausen, RM-Wert, Anzahl der Trainingstage,...) sind jediglich eine Option für den Benutzer und können auch frei gewählt werden.
 	\subsection{Was ist Was?}
 	Eine \grqq{}Wiederholung\grqq{} ist das 1-malige Ausüben einer Übung. 
@@ -31,7 +20,7 @@
 	Das Gewicht kann aber auch selbst abgeschätzt werden. Das Gewicht ist dann optimal gewählt, wenn man damit zwischen 10 und 13 Wiederholungen schafft.
 	Weiters wird immer auf eine Aufwärmphase hingewiesen, welche man vor jeder Trainingseinheit durchführen muss. Sie besteht aus 5-10 Minuten Laufen und Dehnen.
 	\newpage
-	\section{Phase 1: Allgemein}
+	\subsection{Phase 1: Allgemein}
 	Phase 1 ist für jeden gleich, unabhängig vom Trainingsziel, und dient dem Eintrainieren. Am Anfang wird festgehalten, ob der Benutzer einen untrainierten oder bereits trainierten Körper besitzt. Anhand dessen und dem ausgewählten Schema (Bauch - Beine - Po, Oberkörper/Arme, Stabilisation (R"ucken \& Gesundheit)) werden in dieser Phase die "Ubungen ausgewählt und die Anzahl der S"atze/Wiederholungen bestimmt:
 	\begin{center}
 		\begin{tabular}{| l || l | l |}
@@ -95,7 +84,7 @@
 		\end{center}
 		
 	\newpage	
-	\section{Phase 2: Kraftausdauer (Gesundheit)}
+	\subsection{Phase 2: Kraftausdauer (Gesundheit)}
 	Phase 2: Kraftausdauer (Gesundheit) besteht aus 2 Phase 1: Allgemein Trainingstagen in der Woche. Zusätzlich besteht das Training aus entweder 1 Mal w"ochentlich Phase 2: Muskelaufbau -training oder 1 Mal w"ochentlich Stabilit"ats"ubungen. Welche der Benutzer ausf"uhren will kann er selbst am Anfang entscheiden, je nachdem ob er seinen K"orper formen will, oder ob er es als Gesundheits- oder Reha"ubung macht.
 	\newline
 	Also im "Uberblick:
@@ -130,7 +119,7 @@
 	\end{center}
 		
 	\newpage	
-	\section{Phase 2: Muskelaufbau \newline Phase 3: Kraftausdauer}	
+	\subsection{Phase 2: Muskelaufbau \newline Phase 3: Kraftausdauer}	
 	Wenn man als Trainingsziel \grqq{}Muskelaufbau\grqq{} gewählt hat, kommt diese nach Phase 1, oder wenn man Phase 2: Kraftausdauer (Gesundheit) abgeschlossen hat. In dieser Phase kommen viel Hantel- und Seilzugtraining zum Einsatz. Dabei ist zu beachten, dass die Schwierigkeit der "Ubung egal ist. Es wird davon ausgegangen, dass ein Anf"anger nach der 8-w"ochigen Phase 1 bereits fit genug ist, um alle "Ubungen die sich im Trainingskatalog befinden zu meistern. 
 	\newline
 	Der User kann sich beginnend aussuchen, welche 2-3 Muskelgruppen er trainieren will. Am Phasenanfang wird zwischen Splittraining und Ganzkörpertraining unterschieden. Der Unterschied zwischen den Trainingsarten liegt bei der zeitlichen Ausführung der "Ubungen. Bei dem Splittraining werden "Ubungen zu einer bestimmten Muskelgruppe bei jeder Trainingseinheit durchgeführt. Umgekehrt wird bei dem Ganzk"orpertraining in jeder Trainingseinheit auf einen bestimmte Muskelgruppe geziehlt. 
@@ -155,7 +144,7 @@
 	Nach Phase 3: Kraftausdauer ist wieder von Anfang an (Phase 1: Allgemein) zu beginnen. Man kann aber auch aufh"ören oder sich einen neuen Trainingsplan generieren lassen.
 	
 	\newpage
-	\section{Phase 2: Maximalkraft \newline Phase 3: Muskelaufbau}
+	\subsection{Phase 2: Maximalkraft \newline Phase 3: Muskelaufbau}
 	Diese Phase ist für das Maximalkrafttrainingsziel die Phase 2 und f"ur das Muskelaufbautrainingsziel die Phase 3. Nur Fortgeschrittene oder User die die Phase 2: Muskelaufbau durchgef"uhrt haben, k"onnen diese Phase beginnen.
 	\newline
 	Maximalkraft"ubungen sind immer Ganzk"orper"ubungen.
@@ -183,7 +172,7 @@
 	Nach Phase 3: Muskelaufbau ist der Trainingsplan zu ende. Nun kann man ihn erneut starten (vom Anfang an), h"ort auf, oder l"asst sich erneut einen generieren.
 	
 	\newpage
-	\section{Phase 3: Maximalkraft}
+	\subsection{Phase 3: Maximalkraft}
 	Phase 3: Maximalkraft kommt nach Phase 2: Maximalkraft. Hierbei wird jediglich 2 Mal w"ochentlich trainiert. Die Tage kann sich der Benutzer wieder aussuchen, einzige Bedingung sind 48 Stunden Erholungszeit. 
 	Die Phase besteht wieder aus Seilzug- und Hantel"ubungen, insgesamt 6 mit jeweils 2 Wiederholungen zu 5 Sätzen. Hierbei wird das Trainingsgewicht erneut f"ur ca. 95\%RM gew"ahlt.
 	\newline
@@ -202,13 +191,13 @@
 		\end{center}
 	Nach Phase 3: Maximalkraft ist der Trainingsplan zu ende. Nun kann man ihn erneut starten (vom Anfang an), h"ort auf, oder l"asst sich erneut einen generieren.
 	
-	\section{Visualisierung}
+	\subsection{Visualisierung}
 	\begin{center}
 		\includegraphics[scale=0.4]{img/VisualisierungTrainingsplan}
 	\end{center}
 	
 	\newpage
-	\section{Mobilisation}
+	\subsection{Mobilisation}
 	Die Mobilisation beim Maximalkrafttraining dient dazu, den K"orper auf das kommende schwere Training vorzubereiten. 
 	Sie besteht aus:
 			\begin{center}
