--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
@@ -5,6 +5,33 @@
 
 \begin{document}
 \subsection{PaidVersion}
-TODO
+
+\subsubsection{Beschreibung}
+Die App wird mit einem fixen Preis veröffentlicht bzw. verkauft.
+Der Kunde bezahlt ein mal und erhält unser Produkt, mit seinem gesamten Funktionsumfang, sofort.
+Alle zukünftigen Updates sind im Preisumfang enthalten.
+
+\subsubsection{Vorteile}
+\begin{itemize}
+\item Ein klarer Vorteil bei einem fixen Preis ist, dass es die einfachste Methode der Vermarktung ist.
+Es ist die bekannteste und weit verbreiteste Methode ein Produkt zu vermarkten, dies ist dem Kunden natürlich auch vertrauter als andere Methoden.
+
+\item Weiters ist es die sicherste Methode der Vermarktung, sie garantiert Geld fast sofort, was wiederrum für die Weiterentwicklung verwendet werden kann.
+
+
+\item Ein weiterer Vorteil ist der geringe Verwaltungsaufwand. Die App wird am Google-Play-Store vermarktet
+und kümmert sich um jegliche Details, wie z.B. Steuern.
+
+\subsubsection{Nachteile}
+\begin{itemize}
+\item Ein Nachteil dieser Vermarktungsmethode ist, dass der Kunde in ein Produkt investiert, welches er vorher nie ausprobieren könnte.
+Dies könnte möglicherweise abschreckend wirken und potentielle Kunden abwimmeln.
+
+\subsubsection{Preis}
+Der Preis unseres Produkt wird anfänglich bei weniger als einem Euro liegen.
+Bei einer stetig wachsenden Benutzeranzahl wird der Preis auf einen bis zwei Euro erhöht werden.
+Dies ist jedoch das Maximum, da ein zu hoher Preis zu niedrigeren Verkaufszahlen führt.
+
+
 
 \end{document}
