irsiegler_latex_update1
added the entry to fiply_base
and fixed paid_version

--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -37,6 +37,10 @@
 \newpage
 \subfile{irsiegler_PaidVersion}
 \newpage
+\subfile{irsiegler_FreePremium}
+\newpage
+\subfile{irsiegler_SellApp}
+\newpage
 \subfile{bersenkowitsch_Promotions}
 
 \section{Der Trainingsplan}
