--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
@@ -13,25 +13,30 @@ Alle zukünftigen Updates sind im Preisumfang enthalten.
 
 \subsubsection{Vorteile}
 \begin{itemize}
+
 \item Ein klarer Vorteil bei einem fixen Preis ist, dass es die einfachste Methode der Vermarktung ist.
 Es ist die bekannteste und weit verbreiteste Methode ein Produkt zu vermarkten, dies ist dem Kunden natürlich auch vertrauter als andere Methoden.
 
-\item Weiters ist es die sicherste Methode der Vermarktung, sie garantiert Geld fast sofort, was wiederrum für die Weiterentwicklung verwendet werden kann.
-
+\item Weiters ist es die sicherste Methode der Vermarktung, sie garantiert Geld fast sofort, was wiederum für die Weiterentwicklung verwendet werden kann.
 
 \item Ein weiterer Vorteil ist der geringe Verwaltungsaufwand. Die App wird am Google-Play-Store vermarktet
 und kümmert sich um jegliche Details, wie z.B. Steuern.
+
+\end{itemize}
 
 \subsubsection{Nachteile}
 \begin{itemize}
 \item Ein Nachteil dieser Vermarktungsmethode ist, dass der Kunde in ein Produkt investiert, welches er vorher nie ausprobieren könnte.
 Dies könnte möglicherweise abschreckend wirken und potentielle Kunden abwimmeln.
+\end{itemize}
 
 \subsubsection{Preis}
 Der Preis unseres Produkt wird anfänglich bei weniger als einem Euro liegen.
 Bei einer stetig wachsenden Benutzeranzahl wird der Preis auf einen bis zwei Euro erhöht werden.
 Dies ist jedoch das Maximum, da ein zu hoher Preis zu niedrigeren Verkaufszahlen führt.
 
-
+\subsubsection{Google-Play-Store}
+Um eine App in den Google-Play-Store hochzuladen und dort zu vermarkten ist ein Google-Developer Account nötig.
+Weiters muss die App der EULA von Google zur Vermarktung von Apps in ihrem Store entsprechen. /cite{
 
 \end{document}
