--- a/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/bersenkowitsch_Promotions.tex
@@ -56,12 +56,6 @@ Das Icon sollte möglichst minimalistisch gehalten werden. Der Benutzer assoziie
 Bei der Einbettung von Medien im Google Playstore sollten die nützlichsten und besten Aspekte und Funktionen der Applikation widergegeben werden. Screenshots mit wenig Aussagekraft sollte vermieden werden, da es ein Limit für eingebundenen Medien für das Appprofil gibt und diese möglichst effizient genutzt werden sollten.
 
 \subsubsection{Fazit}
-\grqq{}Grundsätzlich kann gesagt werden, dass man sich bei der Bewerbung einer App nicht nur auf die Optimierungsmöglichkeiten im Store verlassen sollte. Es muss in Bezug auf Werbung vielmehr ein ganzheitlicher Ansatz gewählt werden, der schon vorab – also vor Veröffentlichung der App – bei den potenziellen Nutzern einen Anreiz zum Download schafft. Das Wichtigste ist allerdings, seine Annahmen und Maßnahmen regelmäßig auf deren Wirksamkeit und Erfolg hin zu prüfen und gegebenenfalls zu optimieren bzw. im Fall der Fälle auch gänzlich zu überdenken.\grqq{}
-
-\subsubsection{Quellen:}
-\begin{itemize}
-	\item http://www.app-entwicklung.info/2015/04/moglichkeiten-der-app-vermarktung-teil-1-website-social-media-presse-events-co/
-	\item http://www.app-entwicklung.info/2015/05/moglichkeiten-der-app-vermarktung-teil-2-die-app-store-optimierung-aso/
-\end{itemize}
+\begin{quote}Grundsätzlich kann gesagt werden, dass man sich bei der Bewerbung einer App nicht nur auf die Optimierungsmöglichkeiten im Store verlassen sollte. Es muss in Bezug auf Werbung vielmehr ein ganzheitlicher Ansatz gewählt werden, der schon vorab – also vor Veröffentlichung der App – bei den potenziellen Nutzern einen Anreiz zum Download schafft. Das Wichtigste ist allerdings, seine Annahmen und Maßnahmen regelmäßig auf deren Wirksamkeit und Erfolg hin zu prüfen und gegebenenfalls zu optimieren bzw. im Fall der Fälle auch gänzlich zu überdenken.\end{quote}
 
 \end{document}
