--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_PaidVersion.tex
@@ -4,6 +4,7 @@
 \date{25. Februar 2016}
 
 \begin{document}
+	
 \subsection{PaidVersion}
 
 \subsubsection{Beschreibung}
@@ -37,6 +38,6 @@ Dies ist jedoch das Maximum, da ein zu hoher Preis zu niedrigeren Verkaufszahlen
 
 \subsubsection{Google-Play-Store}
 Um eine App in den Google-Play-Store hochzuladen und dort zu vermarkten ist ein Google-Developer Account nötig.
-Weiters muss die App der EULA von Google zur Vermarktung von Apps in ihrem Store entsprechen. /cite{
+Weiters muss die App der EULA von Google zur Vermarktung von Apps in ihrem Store entsprechen.
 
 \end{document}
