--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -43,8 +43,10 @@
 \newpage
 \subfile{bersenkowitsch_Promotions}
 
+\newpage
 \section{Der Trainingsplan}
 \subfile{bersenkowitsch_Trainingsplan}
+
 \newpage
 \printbibliography
 
