--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -7,6 +7,13 @@
   url =   {https://developer.android.com/google/play/billing/billing_admin.html}
 }
 
+@Misc{adAds,
+  title = {Earn Revenue from AdMob Ads},
+  month = feb,
+  year =  {2016},
+  url =   {http://developer.android.com/distribute/monetize/ads.html}
+}
+
 @Misc{adFragments,
   title = {Fragment},
   month = feb,
@@ -63,6 +70,13 @@
   month = feb,
   year =  {2016},
   url =   {https://flattr.com/about}
+}
+
+@Misc{gdAdMob,
+  title = {Adding AdMob into an Existing App},
+  month = feb,
+  year =  {2016},
+  url =   {https://developers.google.com/admob/android/existing-app}
 }
 
 @Misc{gpDevContentPolicy,
