--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Advertising.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Advertising.tex
@@ -4,7 +4,19 @@
 \date{25. Februar 2016}
 
 \begin{document}
-\subsection{Advertising}
+\subsection{Advertising mit AdMob}
+Mit dem Schalten von Werbung steht eine weitere Einkommensquelle von Apps zur Verfügung.
+Es gibt mehrere Dienste die das Schalten von Werbungen unterstützen.
+Google AdMob ist der populärste dieser Dienste und wird von Google empfohlen.
+Die Google Developers Seite stellt Tutorials bereit wie Werbungen mit AdMob implementiert werden können.
+
+\subsubsection{Banners}
+Banner Ads nehmen einen kleinen Teil des Bildschirms ein. Diese werden meistens in einem Layout File erstellt und dann in einer Activity oder in einem Fragment geladen. Der User kann durch einen Klick auf den Banner auf die beworbene Webseite weitergeleitet werden.
+
+\subsubsection{Interstitials}
+Interstitial Ads bedecken den gesamten Bildschirm. 
+Dabei wird ein InterstitialAd Objekt mit einer einzigartigen Id erstellt. Später wird eine Werbung angefordert und sobald diese geladen ist wird sie angezeigt. Der Benutzer erhält die Entscheidung die Anzeige zu schließen oder dem Link der Werbung zu folgen. Deshalb eignen sich Interstitials in Apps die gelegentlich zwischen 2 Bildschirmen wechseln.
+Bei diesen Werbungen ist zu beachten, dass die App im Hintergrund weiterläuft also sollten laute Tonwiedergaben und ressourcenintensive Benutzerinteraktionen pausiert werden. Zusätzlich ist es möglich diese Interstitials in einem bestimmten Zeitintervall einzublenden.
 
 
 \end{document}
