--- a/FIPLY/Dokumente/FIPLY Latex/literatur.bib
+++ b/FIPLY/Dokumente/FIPLY Latex/literatur.bib
@@ -79,6 +79,20 @@
   url =   {https://developers.google.com/admob/android/existing-app}
 }
 
+@Misc{gdBanner,
+  title = {Banner Ads},
+  month = feb,
+  year =  {2016},
+  url =   {https://developers.google.com/admob/android/banner}
+}
+
+@Misc{gdInterstitials,
+  title = {Interstitial Ads},
+  month = feb,
+  year =  {2016},
+  url =   {https://developers.google.com/admob/android/interstitial}
+}
+
 @Misc{gpDevContentPolicy,
   title = {Google Play-Programmrichtlinien},
   month = feb,
