--- a/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/FIPLY_base.tex
@@ -10,45 +10,45 @@
 \tableofcontents
 
 \newpage
-\subfile{bersenkowitsch_guiessay}
+\subfile{bersenkowitsch_guiessay} % not yet approved
 
 \newpage
-\subfile{denkmayr_Fragments}
+\subfile{denkmayr_Fragments} % not yet approved
 
 \newpage
-\subfile{bersenkowitsch_Databinding}
+\subfile{bersenkowitsch_Databinding} % not yet approved
 
 \newpage
-\subfile{denkmayr_Bundles}
+\subfile{denkmayr_Bundles} % not yet approved
 
 \newpage
-\subfile{denkmayr_Permissions}
+\subfile{denkmayr_Permissions} % not yet approved
 
 \newpage
-\subfile{denkmayr_Music-Player}
+\subfile{denkmayr_Music-Player} % not yet approved
 
 \newpage
-\subfile{denkmayr_NavigationDrawer}
+\subfile{denkmayr_NavigationDrawer} % not yet approved
 
 \newpage
 \section{Commercialization}
-\subfile{denkmayr_Donations}
+\subfile{denkmayr_Donations} % not yet approved
 \newpage
-\subfile{denkmayr_Freemium}
+\subfile{denkmayr_Freemium} % not yet approved
 \newpage
-\subfile{denkmayr_Advertising}
+\subfile{denkmayr_Advertising} % not yet approved
 \newpage
-\subfile{irsiegler_PaidVersion}
+\subfile{irsiegler_PaidVersion} % not yet approved
 \newpage
-\subfile{irsiegler_FreePremium}
+\subfile{irsiegler_FreePremium} % not yet approved
 \newpage
-\subfile{irsiegler_SellApp}
+\subfile{irsiegler_SellApp} % not yet approved
 \newpage
-\subfile{bersenkowitsch_Promotions}
+\subfile{bersenkowitsch_Promotions} % not yet approved
 
 \newpage
 \section{Der Trainingsplan}
-\subfile{bersenkowitsch_Trainingsplan}
+\subfile{bersenkowitsch_Trainingsplan} % not yet approved
 
 \newpage
 \printbibliography
