--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_FreePremium.tex
@@ -4,7 +4,7 @@
 \date{25. Februar 2016}
 
 \begin{document}
-\subsection{Freemium}
+\subsection{Free/Paid Versions}
 
 
 \subsubsection{Beschreibung}
