--- a/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/irsiegler_Statistic.tex
@@ -7,7 +7,9 @@
 \subsection{Statistic}
 
 \subsubsection{Beschreibung}
-Die Statistik ist ein essentieller Part unserer App, hier kann ein User einsehen wie er sich in den letzten Tagen/Wochen/Monaten geschlagen hat.
+Mithilfe der Statistik kann der Benutzer feststellen wie er sich in den letzten Tagen/Wochen/Monaten geschlagen hat.
+Die verschiedenen verfügbaren Statistiken sollen dem Benutzer einen umfangreichen Überblick geben.
+
 
 \subsubsection{Verfügbare Statistiken}
 \begin{itemize}
@@ -15,5 +17,10 @@ Die Statistik ist ein essentieller Part unserer App, hier kann ein User einsehen
 \item Entwicklung seines gehobenen Gewichts (anfänglich mit 10kg später mit 20kg etc.)
 \item Wieviel Gewicht hat der User an einem Tag, in einer Woche/Monat bewegt.
 \end{itemize}
+
+\subsubsection{GraphView}
+Um die Statistiken in der App darzustellen wird GraphView verwendet, eine open source library für Android zum erstellen von Diagrammen.
+
+
 
 \end{document}
